# inference

./: .gitignore  README.md  RUN.md  debug_inference.py  deploy.py  install.py  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
scripts/: create_github_repo.sh  restart.sh  setup_full_deploy.sh  setup_remote.sh
src/: downloader.py  inference.py  main.py
static/: index.html
tests/: content.md  schema.json  test_extraction.py
